# kkcli

./: .gitmodules  Cargo.toml  binance_tx.json  build.rs  cosmos_tx.json  eos_tx.json  eos_tx_2.json  eos_tx_3.json
.github/workflows/: audit.yml  ci.yml
kkcli_derive/: Cargo.toml
kkcli_derive/src/: lib.rs
src/: main.rs  messages.rs  state_machine.rs  transport.rs
src/cli/: decode.rs  list.rs  macros.rs  mod.rs
src/cli/binance/: get_address.rs  mod.rs  schema.rs  sign_tx.rs
src/cli/cosmos/: get_address.rs  mod.rs  schema.rs  sign_tx.rs
src/cli/eos/: get_public_key.rs  mod.rs  schema.rs  sign_tx.rs
src/cli/ethereum/: get_address.rs  mod.rs  sign_message.rs  sign_tx.rs  verify_message.rs
src/cli/nano/: get_address.rs  mod.rs  sign_tx.rs
src/cli/parsers/: base64.rs  bip32.rs  hex.rs  mod.rs  serde.rs  typed_possible_values.rs  u256.rs  xprv.rs
src/cli/ripple/: get_address.rs  mod.rs  sign_tx.rs
src/cli/system/: apply_policy.rs  apply_settings.rs  change_pin.rs  change_wipe_code.rs  cipher_key_value.rs  clear_session.rs  firmware_update.rs  mod.rs  set_label.rs  sign_identity.rs  wipe_device.rs
src/cli/system/debug/: fill_config.rs  flash_dump.rs  get_state.rs  mod.rs
src/cli/system/info/: get_entropy.rs  get_features.rs  get_public_key.rs  list_coins.rs  mod.rs  ping.rs
src/cli/system/initialize/: load_device.rs  mod.rs  recovery_device.rs  reset_device.rs
src/cli/tendermint/: get_address.rs  mod.rs  schema.rs  sign_tx.rs
src/cli/thorchain/: get_address.rs  mod.rs  schema.rs  sign_tx.rs
src/cli/types/: bip32.rs  mod.rs
src/cli/utxo/: get_address.rs  mod.rs  sign_message.rs  sign_tx.rs  verify_message.rs
src/messages/: encoding.rs  macros.rs  mod.rs  protos.rs  timeouts.rs
src/transport/: mod.rs  protocol_adapter.rs  usb.rs
(+4 files in other folders)
