[package]
name = "kkcli_derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
itertools = "0.10.3"
prost = { version = "0.10.4", default-features = false, features = ["prost-derive"] }
quote = "1.0.20"
syn = "1.0.98"
